fixed typo, use VT on scheduled executor, use StringBuilders